tests/parser-test-files/bad-files/parse-lisp.2.error
error: Malformed lisp expression
  --> test:4:24
   |
 4 |  (define f (lisp (T -> T)))
   |                          ^ expected binding list
